[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://Player/Skills/Shield/shield.gd" id="1"]
[ext_resource type="Script" path="res://Components/HealthComponent.gd" id="2"]
[ext_resource type="Script" path="res://Components/StatHandler.gd" id="3"]
[ext_resource type="Script" path="res://Components/BaseStats.gd" id="4"]

[sub_resource type="StandardMaterial3D" id="1"]
albedo_color = Color(0.0980392, 0.0666667, 0.203922, 1)
script = null

[sub_resource type="StandardMaterial3D" id="2"]
transparency = 1
albedo_color = Color(0.917647, 0.498039, 0.2, 0.67451)
emission = Color(0.835294, 0.34902, 0.145098, 1)
emission_energy_multiplier = 1.18
script = null

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0.0980392, 0.0666667, 0.203922, 1)
script = null

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 4.358, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pillar2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.73555, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pillar2:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 4.35801, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pillar1:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 4.35801, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pillar1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.73555, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Collision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Wall:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="Animation" id="5"]
resource_name = "ShieldBreak"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pillar1:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 4.35801, 1), Vector3(1, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pillar2:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 4.35801, 1), Vector3(1, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Collision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
script = null

[sub_resource type="Animation" id="6"]
resource_name = "ShieldOpen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.5), Vector3(0, 4, 0.5), Vector3(6, 4, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pillar2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.73555, 0), Vector3(3, 0.736, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pillar2:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.6001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 0.5, 1), Vector3(1, 4.35801, 1), Vector3(1, 4.35801, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pillar1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.73555, 0), Vector3(-3, 0.736, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pillar1:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 0, 1), Vector3(1, 4.35801, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Collision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6, 1, 1.0001),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, false]
}
script = null

[sub_resource type="AnimationLibrary" id="7"]
_data = {
"RESET": SubResource("4"),
"ShieldBreak": SubResource("5"),
"ShieldOpen": SubResource("6")
}
script = null

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(6.98521, 4.82059, 1)
script = null

[node name="Shield" type="CharacterBody3D" node_paths=PackedStringArray("StatHandler", "HealthComponent") groups=[
"Shield",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1")
StatHandler = NodePath("StatHandler")
HealthComponent = NodePath("HealthComponent")

[node name="HealthComponent" type="Node3D" parent="." node_paths=PackedStringArray("StatHandler")]
script = ExtResource("2")
StatHandler = NodePath("../StatHandler")
Invulnerable = true

[node name="StatHandler" type="Node" parent="." node_paths=PackedStringArray("BaseStats", "MainNode")]
script = ExtResource("3")
BaseStats = NodePath("../BaseStats")
MainNode = NodePath("..")

[node name="BaseStats" type="Node" parent="."]
script = ExtResource("4")

[node name="Pillar1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73555, 0)
size = Vector3(1, 4.35801, 1)
material = SubResource("1")

[node name="Wall" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73555, 0)
size = Vector3(0, 4.358, 0.5)
material = SubResource("2")

[node name="Pillar2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.73555, 0)
size = Vector3(1, 4.35801, 1)
material = SubResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("7")
}

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.679193, 0)
shape = SubResource("8")

[connection signal="on_damage_received" from="HealthComponent" to="." method="_on_health_component_on_damage_received" flags=18]
[connection signal="on_death" from="HealthComponent" to="." method="_on_health_component_on_death" flags=18]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished" flags=18]
